--- a/src/components/MyReadings/MyReadings.css
+++ b/src/components/MyReadings/MyReadings.css
@@ -387,7 +387,9 @@ a {
     border-radius: 10px;
     max-width: 500px;
     width: 90%;
+    height: 500px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    overflow-y: auto;
 }
 
 .modal-content h2 {
@@ -563,7 +565,7 @@ a {
     top: -5.3px;
     right: 12.2px;
     cursor: pointer;
-    z-index: 100;
+    z-index: 1;
 }
 
 #bk-list li:hover .bookmark-container.leyendo {
@@ -581,7 +583,7 @@ a {
     top: -5.3px;
     right: 13px;
     cursor: pointer;
-    z-index: 100;
+    z-index: 1;
 }
 
 #bk-list li:hover .bookmark-container.no-leyendo {
@@ -603,13 +605,13 @@ a {
     .bookmark-container.leyendo {
         top: -2px;
         right: -2px;
-        z-index: 100;
+        z-index: 1;
     }
 
     .bookmark-container.no-leyendo {
         top: 1px;
         right: 2px;
-        z-index: 100;
+        z-index: 1;
     }
 
     .bookmark-container.leyendo svg.active-bookmark {
