--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url('../public/img/background.jpg'); /* Ruta relativa a la carpeta public */
-  background-size: cover; /* Ajusta según tus necesidades */}
+  background-image: url('../public/img/background.jpg');
+  /* Ruta relativa a la carpeta public */
+  background-size: cover;
+  /* Ajusta según tus necesidades */
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE/Edge */
+  user-select: none;
+  /* Estándar */
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
