--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -56,7 +56,7 @@
 }
 
 /* Estilos para pantallas más grandes */
-@media (min-width: 768px) {
+@media (max-width: 576px) {
     .app-footer {
         justify-content: center;
         /* Centrar la barra en pantallas grandes */
