--- a/src/components/NavigationMenu.css
+++ b/src/components/NavigationMenu.css
@@ -1,20 +1,19 @@
 .responsive-nav {
-  background-color: #2c3e50; /* Un tono oscuro */
+  background-color: #2c3e50;
   color: white;
   padding: 15px 20px;
   display: flex;
-  justify-content: center; /* Centrar el contenido principal en móvil */
+  justify-content: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width: 100%;
-  position: fixed; /* Fijar al fondo de la ventana */
-  z-index: 10; /* Asegurar que esté por encima de otros elementos */
-
+  position: fixed;
+  z-index: 10;
 }
 
 .nav-header {
   display: flex;
   width: 100%;
-  max-width: 768px; /* Ancho máximo para centrar en pantallas grandes */
+  max-width: 768px;
   justify-content: space-between;
   align-items: center;
 }
@@ -25,12 +24,13 @@
   justify-content: center;
   color: white;
   text-decoration: none;
-  padding: 10px 15px;
   border-radius: 5px;
   transition: box-shadow 0.3s ease-in-out;
-  min-width: 80px; /* Ancho mínimo para los botones */
-  box-sizing: border-box; /* Incluir padding y border en el ancho */
+  min-width: 80px;
+  box-sizing: border-box;
+  padding: 10px 15px;
 }
+
 
 .nav-button:hover {
   box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.7);
@@ -38,14 +38,44 @@
 }
 
 .nav-center {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
   font-size: 1.2em;
   font-weight: bold;
+  padding: 0px 15px;
 }
 
+.nav-center img {
+  width: 50px;
+  height: 50px;
+}
 
-/* Estilos para pantallas más grandes */
-@media (min-width: 768px) {
+.nav-center span {
+  font-family: "Libre Barcode 39 Text";
+  font-weight: 400;
+  font-size: 30px;
+}
+
+/* Estilos para pantallas pequeñas */
+@media (max-width: 576px) {
   .responsive-nav {
-      justify-content: center; /* Centrar la barra en pantallas grandes */
+    padding: 2px 0px;
+    justify-content: center;
+  }
+
+  .nav-button {
+    padding: 12px 5px;
+  }
+
+  .nav-left,
+  .nav-right {
+    padding: 25px; /* Mantiene padding amplio también en móviles */
+  }
+
+  .nav-center img {
+    width: 50px;
+    height: 50px;
   }
 }
