--- a/src/components/WishList/WishList.css
+++ b/src/components/WishList/WishList.css
@@ -3,7 +3,7 @@
 /* =================================
    Estilos Generales
    ================================= */
-   html {
+html {
     height: 100%;
     box-sizing: border-box;
 }
@@ -414,9 +414,12 @@ a {
     cursor: pointer;
     font-size: 1em;
     transition: background-color 0.2s ease-in-out;
-    display: block; /* Hacer que el botón ocupe todo el ancho disponible */
-    margin: 10px auto 0; /* Establecer márgenes superior e inferior y centrar horizontalmente */
-    text-align: center; /* Asegurar que el texto dentro del botón también esté centrado (por si acaso) */
+    display: block;
+    /* Hacer que el botón ocupe todo el ancho disponible */
+    margin: 10px auto 0;
+    /* Establecer márgenes superior e inferior y centrar horizontalmente */
+    text-align: center;
+    /* Asegurar que el texto dentro del botón también esté centrado (por si acaso) */
 }
 
 .modal-content button:hover {
@@ -572,9 +575,11 @@ a {
 }
 
 .bookmark-container.leyendo svg.active-bookmark {
-    fill: #ffc107;
-    width: 34px;
-    height: 34px;
+    fill: red;
+    stroke: black;
+    stroke-width: 1.5px;
+    color: #222;
+    transition: fill 0.2s ease-in-out;
 }
 
 .bookmark-container.no-leyendo {
@@ -582,6 +587,7 @@ a {
     top: -5.3px;
     right: 13px;
     cursor: pointer;
+    z-index: 1;
 }
 
 #bk-list li:hover .bookmark-container.no-leyendo {
@@ -590,7 +596,9 @@ a {
 
 .bookmark-container.no-leyendo svg.inactive-bookmark {
     fill: white;
-    color:#222;
+    stroke: black;
+    stroke-width: 1.5px;
+    color: #222;
     transition: fill 0.2s ease-in-out;
 }
 
@@ -600,42 +608,53 @@ a {
 
 .bk-buttons-wish {
     display: flex;
-    justify-content: flex-end; /* Or space-between, space-around, etc. */
-    align-items: center; /* Align items vertically in the center */
+    justify-content: flex-end;
+    /* Or space-between, space-around, etc. */
+    align-items: center;
+    /* Align items vertically in the center */
     gap: 0.5rem;
     margin-top: 0.5rem;
 }
 
 .bookmark-container.wished {
     cursor: pointer;
-    margin-left: 0.5rem; /* Add some space to the left of the heart */
+    margin-left: 0.5rem;
+    /* Add some space to the left of the heart */
 }
 
 .bk-acquire-button {
     border: none;
-    background-color: transparent; /* Para hacerlo completamente transparente */
-    padding: 0; /* Quitar cualquier padding interno */
-    margin-right: 10px; /* Espacio entre el botón y el icono de "me gusta" */
-    font-size: 1em; /* Ajusta el tamaño de la fuente si es necesario */
-    cursor: pointer; /* Indica que es interactivo */
-    outline: none; /* Quitar el contorno al enfocar */
+    background-color: transparent;
+    /* Para hacerlo completamente transparente */
+    padding: 0;
+    /* Quitar cualquier padding interno */
+    margin-right: 10px;
+    /* Espacio entre el botón y el icono de "me gusta" */
+    font-size: 1em;
+    /* Ajusta el tamaño de la fuente si es necesario */
+    cursor: pointer;
+    /* Indica que es interactivo */
+    outline: none;
+    /* Quitar el contorno al enfocar */
 }
 
 /* Ajustes para el bookmark en modo móvil */
 @media (max-width: 576px) {
     .bookmark-container.leyendo {
-        top: -2px;
-        right: -2px;
+        top: 1px;
+        right: 2px;
+        z-index: 1;
     }
 
     .bookmark-container.no-leyendo {
         top: 1px;
         right: 2px;
+        z-index: 1;
     }
 
     .bookmark-container.leyendo svg.active-bookmark {
-        width: 32px;
-        height: 32px;
+        width: 24px;
+        height: 24px;
     }
 
     .bookmark-container.no-leyendo svg.inactive-bookmark {
